# trajectory_generation

./: CMakeLists.txt  README.md  package.xml  setup.sh
config/: mpc.yaml  mpc_12state.yaml
include/trajectory_generation/: mpc.hpp  mpc_12state.hpp  mpc_12state_ros.hpp  mpc_6dof.hpp  mpc_ros.hpp
launch/: mpc.launch.py  mpc_12state.launch.py
scripts/: plot_trajectories.py
src/: mpc.cpp  mpc_12state.cpp  mpc_12state_node.cpp  mpc_12state_ros.cpp  mpc_6dof.cpp  mpc_node.cpp  mpc_ros.cpp
test/: test_mpc_12state.cpp  test_mpc_6dof.cpp
